# shinkai-tools

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  build-tool.sh  deno.json  import_map.json  jest.preset.js  launch.ts  nx.json  package-lock.json  package.json  todo.md  tsconfig.base.json
.github/: build-tool.sh  build_tool.sh  run_node.sh
.github/workflows/: build_site.yaml  build_tools.yaml  pr-check.yml  release-development.yml  release-production.yml  run_tests.yaml
agents/: sarcastic_agent.json
agents/agent_with_knowledge/: metadata.json  store.json
agents/audio-insight/: metadata.json  store.json
agents/bitcoiner/: metadata.json  store.json
agents/code-directory-and-git-repository-analyzer/: metadata.json  store.json
agents/deepsearch/: metadata.json  store.json
agents/e-librarian/: metadata.json  store.json
agents/e_librarian/: metadata.json  store.json
agents/enhanced-image-generator/: metadata.json  store.json
agents/finance_bro/: metadata.json  store.json
agents/git_repo_analyzer/: metadata.json  store.json
agents/illustrated-story-creator/: metadata.json  store.json
agents/jupiter_stable_arbitrager/: metadata.json  store.json
agents/jupiter_stablecoin_arbitrager/: metadata.json  store.json
agents/learning_tutor/: metadata.json  store.json
agents/linear_agent/: metadata.json  store.json
agents/markdown-content-writer/: metadata.json  store.json
agents/math_problem_solver/: metadata.json  store.json
agents/mind-map-creator/: metadata.json  store.json
agents/negotiation_expert/: metadata.json  store.json
baml_client/: async_client.ts  inlinedbaml.ts  sync_client.ts  type_builder.ts  types.ts
crons/: fetch_usa_news.json
docker-images/: Dockerfile
libs/shinkai-tools-runner/: Cargo.toml  build.rs  project.json
libs/shinkai-tools-runner/.cargo/: config.toml
libs/shinkai-tools-runner/src/: built_in_tools.rs  built_in_tools.test.rs  copy_assets.rs  lib.rs  lib.test.rs  main.rs
libs/shinkai-tools-runner/src/quickjs_runtime/: script.rs  tool.rs
libs/shinkai-tools-runner/src/quickjs_runtime/context_globals/: fetch.rs  mod.rs
libs/shinkai-tools-runner/src/tools/: code_files.rs  container_utils.rs  deno_execution_storage.rs  deno_execution_storage.test.rs  deno_runner.rs  deno_runner.test.rs  deno_runner_options.rs  execution_context.rs  execution_error.rs  execution_storage.rs  execution_storage.test.rs  file_name_utils.rs  mod.rs  path_buf_ext.rs  python_execution_storage.rs  python_runner.rs  python_runner.test.rs  python_runner_options.rs  run_result.rs  runner_type.rs  shinkai_node_location.rs  shinkai_tools_backend.rs  shinkai_tools_backend_options.rs  tool.rs  tool.test.rs  tool_definition.rs
libs/shinkai-tools-runner/src/tools/quickjs_runtime/: mod.rs  script.rs
libs/shinkai-tools-runner/src/tools/quickjs_runtime/context_globals/: console.rs  fetch.rs  mod.rs  set_timeout.rs  text_decoder.rs  text_encoder.rs  text_encoder_decoder.rs  timers.rs  url.rs
libs/shinkai-tools-runner/src/tools/quickjs_runtime/context_globals/utils/: mod.rs  result.rs
registry/: package-lock.json  package.json
registry-backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
registry/public/: index.html  (+1 more)
rust/: Cargo.toml
rust/src/: main.rs
rust/src/quickjs_runtime/: execution_error.rs  mod.rs  script.rs  tool.rs
rust/src/quickjs_runtime/context_globals/: console_log.rs  mod.rs
scripts/: add_text_to_image.ts  attach-shinkai-viem.ts  build_tools.ts  copy-deno.ts  download_agents.ts  download_tools.ts  generate-images.ts  generate_images.ts  invalidate_cache.ts  launch.ts  run_node.sh  shinkai-viem-bundler.ts  tool-bundler.ts  zip.test.ts
tools/: tool_categories.json  update_store_name.py
ts/: package.json  tsconfig.json
(+1342 files in other folders)
