[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
nanoid = "0.4.0"
patch = "0.7.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
rquickjs = { version = "0.6.2", features = ["full-async", "futures", "dump-promise"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
