[package]
name = "shinkai_tools_runner"
description = "Rust library to execute shinkai-tools in a safe and performant environment"
version = { workspace = true }
edition = { workspace = true }
keywords = ["shinkai", "tools", "runner", "safe", "ai"]
include = [
    "src/**/*",
    "tools/**/*",
    "Cargo.toml",
    "Cargo.lock"
]
license-file = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }

[dependencies]
futures = "0.3.30"
nanoid = "0.4.0"
patch = "0.7.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
rquickjs = { version = "0.6.2", features = [
    "full-async",
    "futures",
    "dump-promise",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.5.0"

[features]
built-in-tools = []
